--- a/workspace Tom/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace Tom/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\Tom\\Desktop\\GitHub\\Workspace\\workspace Tom\\Programmieren","type":"PROJECT","hints":{"PROJECT_NAME":"Programmieren"}},"ABSENT"]]
